objects/CIP_History_Billing_Entity__c.object
<CustomObject>
    <fields>
        <fullName>Bill_Copies__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bill Copies</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Entity__c</fullName>
        <label>Bill Entity #</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_Frequency__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bill Frequency</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Sequence__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bill Sequence</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Source__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bill Source</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIP_History_Funding__c</fullName>
        <label>CIP History Funding</label>
        <referenceTo>CIP_History_Funding__c</referenceTo>
        <relationshipLabel>CIP History Billing Entity</relationshipLabel>
        <relationshipName>CIP_History_Billing_Entity</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cycle_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cycle Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Entity Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>For_the_following_suffixes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>For the following suffixes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Funding_Type_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Funding Type Code</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grace_Days__c</fullName>
        <label>Grace Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pay_Type_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pay Type Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Phone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Plan Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Method_Code_RHC__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Rate Method Code (RMC)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retro_Days__c</fullName>
        <label>Retro Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDCLegacyID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SFDCLegacyID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Legacy_Funding__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SFDC Legacy Funding</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tolerance_Level__c</fullName>
        <label>Tolerance Level %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Washout_Code_01__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Washout Code=01</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Washout_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Washout Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>CIP History Billing Entity</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>CIP History Billing Entity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CIP History Billing Entity</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>